src/objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application_Average__c</fullName>
        <formula>IF(
Application_Count__c = 0, 
0,
Application_Sum__c/Application_Count__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Average</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Count__c</fullName>
        <label>Application Count</label>
        <summaryForeignKey>Review__c.Aplication_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application_Sum__c</fullName>
        <label>Application Sum</label>
        <summarizedField>Review__c.Application__c</summarizedField>
        <summaryForeignKey>Review__c.Aplication_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Candidate_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Candidate Id</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job_Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Application__c</fullName>
        <label>Date Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Approver__c</fullName>
        <label>Name of Approver</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Position Id</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>NAME</columns>
        <columns>Is_Agreed__c</columns>
        <filterScope>Mine</filterScope>
        <label>Test</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>